--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^6.1.13",
     "aws-amplify": "^6.4.1"
   }
 }
